--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 GOOGLE_ID=661061022874-fbghrv7ihlljkna12724r7gd5rr0b7gj.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET=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
+
+MONGODB_URI=mongodb+srv://ronnysk:Ronny_141189@cluster0.6yurfzx.mongodb.net/?retryWrites=true&w=majority
