finished the auth routes

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ GOOGLE_ID=661061022874-fbghrv7ihlljkna12724r7gd5rr0b7gj.apps.googleusercontent.c
 GOOGLE_CLIENT_SECRET=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
 
 MONGODB_URI=mongodb+srv://ronnysk:Ronny_141189@cluster0.6yurfzx.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=jj775TdY8gFFucqBXLsfbVqFrzdhfoyFTArQeOZXeY0=
